# recastnavigation

./: .gitignore  CMakeLists.txt  build_binary.bat  build_binary.sh  npm-shrinkwrap.json  package.json  platform.cmake  publish_binary_on_mac.sh  publish_binary_on_windows.bat  publish_package.sh
Detour/Include/: DetourNavMeshQuery.h
Detour/Source/: DetourNavMeshQuery.cpp
DetourCrowd/Include/: DetourCrowd.h
DetourCrowd/Source/: DetourCrowd.cpp
